@@ -8,6 +8,8 @@ The basics
 Loading a table from a CSV
 --------------------------
 
+You can use Python's builtin :mod:`csv` to read CSV files.
+
 If your file does not have headers:
 
 .. code-block:: python
@@ -62,7 +64,21 @@ Filtering
 Filter by regex
 ---------------
 
-TODO
+You can use Python's builtin :mod:`re` module to introduce a regular expression into a :meth:`.Table.where` query.
+
+For example, here we find all states that start with "C".
+
+.. code-block:: python
+
+    import re
+
+    new_table = table.where(lambda row: re.match('^C', row['state']))
+
+This can also be useful for finding values that **don't** match your expectations. For example, finding all values in the "phone number" column that don't look like phone numbers:
+
+..code-block:: python
+
+    new_table = table.where(lambda row: not re.match('\d{3}-\d{3}-\d{4}'))
 
 Filter by glob
 --------------
@@ -98,7 +114,7 @@ Emulating Underscore.js
 filter
 ------
 
-journalism's :meth:`journalism.table.Table.where` functions exactly like Underscore's `filter`.
+journalism's :meth:`.Table.where` functions exactly like Underscore's `filter`.
 
 .. code-block:: python
 
@@ -107,7 +123,7 @@ journalism's :meth:`journalism.table.Table.where` functions exactly like Undersc
 reject
 ------
 
-To simulate Underscore's `reject`, simply negate the return value of the function you pass into journalism's :meth:`journalism.table.Table.where`.
+To simulate Underscore's `reject`, simply negate the return value of the function you pass into journalism's :meth:`.Table.where`.
 
 .. code-block:: python
 
