@@ -1,6 +1,7 @@
 0.2.0
 -----
 
+* Cookbook: Filter by regex. (#27)
 * Cookbook: Underscore filter & reject. (#57)
 * Table.limit implemented. (#58)
 * Cookbook: writing a CSV. (#51)
